fix gaps home

--- a/client/src/app/components/player-and-admin-panel/player-and-admin-panel.component.scss
+++ b/client/src/app/components/player-and-admin-panel/player-and-admin-panel.component.scss
@@ -8,6 +8,7 @@ mat-card {
     max-width: 50%;
     min-width: 500px;
     margin-top: 50px;
+    padding-left: 250px;
 }
 
 .main {
