--- a/client/src/app/pages/waiting-page/waiting-page.component.scss
+++ b/client/src/app/pages/waiting-page/waiting-page.component.scss
@@ -38,3 +38,10 @@ div {
     max-width: 50%;
     margin-top: 50px;
 }
+
+// classe générée par Angular
+.ng-star-inserted {
+    margin-left: 0;
+}
+
+
